src/test/deca/codegen/valid/black-box/int_divide.deca
{
    int a = 8;
    if(a / 4 == 2){
        print("Division int");
    }
}