src/test/deca/codegen/invalid/oracle/divide_int_to_float.deca
{
    int a = 2;
    if(a / 4 == 0.5f){
        print("Division btw 2 int to float");
    }
}